@@ -1,4 +1,4 @@
-$Header: /data/zender/nco_20150216/nco/doc/ANNOUNCE,v 1.663 2013-12-23 05:57:35 zender Exp $ -*-text-*-
+$Header: /data/zender/nco_20150216/nco/doc/ANNOUNCE,v 1.664 2013-12-23 17:24:41 zender Exp $ -*-text-*-
 
 The netCDF Operators NCO version 4.4.0 are ready. 
 
@@ -139,7 +139,7 @@ A. Versions through 4.3.9 would not always copy/print groups that
 A. The -c switch, which instructs NCO to extract all coordinate
    variables, was broken in versions 4.3.fxm-4.3.9. Now fixed.
    
-A. The -X switch 
+A. The -X switch fxm
 
 KNOWN ISSUES NOT YET FIXED:
 
